Added restart: always tag to app service

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,7 @@ services:
   app:
     container_name: auxtel-app
     image: auxtel-web
+    restart: always
     build: ./
     volumes:
       - ./app:/app
